last_viewed_pathname in cookie

--- a/ff_html/flowerflower_test/web.html
+++ b/ff_html/flowerflower_test/web.html
@@ -13,6 +13,9 @@
 	<script src="../flowerflower/fire_content_updated.js"></script>
 	<link rel="stylesheet" href="../design/design.css" />
 	<link rel="stylesheet" href="../design/before_restore_scroll_position.css" id="beforeRestoreScrollPosition" />
+	<script>
+	$.cookie('last_viewed_pathname', "" + location.pathname, {expires: 3650, path: '/'});
+	</script>
 </head>
 <body>
 	<div id="full_box">
