--- a/ff_html/flowerflower_test/index.html
+++ b/ff_html/flowerflower_test/index.html
@@ -20,19 +20,7 @@
 	}, false);
 	</script>
 	<link id="beforeRestoreScrollPosition" rel="stylesheet" href="../design/before_restore_scroll_position.css" />
-	<style id="beforeBuildDomTree">
-<!--
-#nav, #outer_frame {
-	display: none;
-}
-#main {
-	position: static;
-}
-.now_loading {
-	display: block;
-}
--->
-	</style>
+	<link id="beforeBuildDomTree" rel="stylesheet" href="../design/before_build_dom_tree.css" />
 </head>
 <body>
 	<div id="full_box">
