--- a/ff_html/flowerflower/index.html
+++ b/ff_html/flowerflower/index.html
@@ -6,21 +6,9 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
     <link rel="stylesheet" href="../tsume/tsume.css">
 	<link rel="stylesheet" href="../design/design.css" />
-	<script src="../flowerflower/load.js"></script>
+	<script src="../flowerflower/load2.js"></script>
 	<link id="beforeRestoreScrollPosition" rel="stylesheet" href="../design/before_restore_scroll_position.css" />
-	<style id="beforeBuildDomTree">
-<!--
-.now_loading {
-	display: block;
-}
-#nav, #outer_frame {
-	display: none;
-}
-#main {
-	position: static;
-}
--->
-	</style>
+	<link id="beforeBuildDomTree" rel="stylesheet" href="../design/before_build_dom_tree.css" />
 </head>
 <body>
 	<div id="full_box">
