--- a/ff_html/flowerflower/index.html
+++ b/ff_html/flowerflower/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 	<div id="full_box">
-		<div class="now_loading"><img src="../design/now_loading.png" alt="Now Loading..." /></div>
+		<div class="now_loading" id="busy_screen">
+			<img id="now_loading" src="../design/now_loading.png" alt="Now Loading..." />
+			<img id="now_authenticating" src="../design/now_authenticating.png" alt="Now Authenticating..." style="visibility:hidden;" />
+		</div>
 		<div id="nav">
 			<ul>
 			</ul>
