--- a/ff_html/flowerflower_test/index.html
+++ b/ff_html/flowerflower_test/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../tsume/tsume.css">
 	<link rel="stylesheet" href="../design/design.css" />
 	<script src="../jquery-1.6.2.min.js"></script>
+	<script src="../design/spin.min.js"></script>
 	<script src="../tsume/tsume.js"></script>
 	<script src="../design/design.js"></script>
 	<link rel="stylesheet" href="../design/design.css" />
@@ -24,7 +25,10 @@
 </head>
 <body>
 	<div id="full_box">
-		<div class="now_loading"><img src="../design/now_loading.png" alt="Now Loading..." /></div>
+		<div class="now_loading" id="busy_screen">
+			<img id="now_loading" src="../design/now_loading.png" alt="Now Loading..." />
+			<img id="now_authenticating" src="../design/now_authenticating.png" alt="Now Authenticating..." style="display:none;" />
+		</div>
 		<div id="nav">
 			<ul>
 			</ul>
