design and update content

--- a/ff_dotnet/FFSite/Public/apps.html
+++ b/ff_dotnet/FFSite/Public/apps.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../design/design_ie8.css" />
 <![endif]-->
 
+    <script src="/ga.js"></script>
+
 </head>
 <body>
     <div id="full_box">
