--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>完全人型のご案内</title>
+    <title>紅茶ボタンのご案内</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
 
     <script src="../jquery-1.6.2.min.js"></script>
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../design/design_ie8.css" />
 <![endif]-->
 
+    <script src="/ga.js"></script>
+
 </head>
 <body>
     <div id="full_box">
@@ -28,28 +30,25 @@
             <img src="../design/now_loading.png" alt="Now Loading..." /></div>
         <div id="nav">
             <ul>
-                <li><a href="latest.html">最新の配信</a></li>
-                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie </a></li>
+                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie</a></li>
                 <li><a href="character_note.html">登場人物紹介 </a></li>
+                <li><a href="affiliate.html">二次利用・アフィリエイト</a></li>
                 <li><a href="http://kaoriha.org/latest_item.html">近刊案内</a></li>
-                <li><a href="apps.html">配信アプリ</a></li>
+                <li><a href="http://kaoriha.org/kanzenhitogata/">次回作のご案内</a></li>
             </ul>
         </div>
         <div id="main">
             <div id="outer_frame">
                 <div id="text_frame">
                     <div id="content">
-                        <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="完全人型　この世でもっとも優れた機械" /></p>
-                        <h1>完全人型のご案内</h1>
-                        <p>　人に似た形をして、人のする作業をこなす機械――「人型」が広く使われている未来。</p>
-                        <p>　人型は用途に応じてたくさんの種類がある。それぞれの用途の範囲では、人型は人よりも優れている。頑丈でしかも修理しやすい表皮を備え、バッテリーとモーターは酷寒酷暑に耐える。そのため人型の姿は、人に似ていながらも異なる。</p>
-                        <p>　けれどただ一種類、人とまったく同じ姿の人型がある。その肌は温かく柔らかく、その心臓は脈打っている。</p>
-                        <p>　その用途は、人に愛されること。</p>
-                        <p>　近未来ファンタジー小説『完全人型』、毎日午後5時に配信。</p>
-                        <p style="text-align:center; font-size:xx-large;"><a href="latest.html">最新の配信</a></p>
-                        <h2>過去に配信された分は？</h2>
-                        <p>　第1回から7回まではこちら＊＊＊でご覧いただけます。それ以降の分は配信アプリをご利用ください。</p>
-                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app//id480562721?mt=8&uo=4"><img style="height:5em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="http://market.android.com/details?id=org.kaoriha.kouchabutton"><img style="height:5em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
+                        <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="MMW――MMKとマイコンと私" /></p>
+                        <h1>紅茶ボタンのご案内</h1>
+                        <p>　学園放課後ウルトラライト百合ノベル『紅茶ボタン』、iOS / Android アプリでお届け中。</p>
+                        <p>　恋に部活に勉強に充実した青春？　いえいえ、なんにもしてません。狭い部室で顔突き合わせて、ガールズトークもしやしない。</p>
+                        <p>　<a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie</a> を途中までお読みいただけます。</p>
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id480562721?mt=8&uo=4"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.kouchabutton"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a> <span style="font-size:3em"><a href="http://www.amazon.co.jp/exec/obidos/ASIN/B00B12GK5A/hound-22/ref=nosim">Kindle</a></span></p>
+                        <h2>MZ-700 キャラグラの世界</h2>
+                        <p>　1982年に発売されたパソコンMZ-700の表示能力を再現しました。<a href="/kouchabutton/mz700/">こちら</a>のページでお楽しみいただけます。</p>
                         <h2>お問い合わせ</h2>
                         <p>　メールアドレス <span style="font-family:monospace">hajime@kaoriha.org</span> にて承ります。</p>
                     </div>
