new handler site design

--- a/ff_dotnet/FFSite/Public/apps.html
+++ b/ff_dotnet/FFSite/Public/apps.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>完全人型の配信アプリ</title>
+    <title>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリ</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
 
     <script src="../jquery-1.6.2.min.js"></script>
@@ -31,7 +31,7 @@
         <div id="nav">
             <ul>
                 <li><a href="latest.html">最新の配信</a></li>
-                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie </a></li>
+                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 赤紫</a></li>
                 <li><a href="character_note.html">登場人物紹介 </a></li>
                 <li><a href="http://kaoriha.org/latest_item.html">近刊案内</a></li>
                 <li class="self_li">配信アプリ</li>
@@ -41,9 +41,9 @@
             <div id="outer_frame">
                 <div id="text_frame">
                     <div id="content">
-                        <h1>完全人型の配信アプリ</h1>
+                        <h1>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリ</h1>
                         <p style="text-align:center;"><img src="screenshot.png" width="320px" height="480px" alt="スクリーンショット" /></p>
-                        <p>完全人型の配信アプリをApp StoreとGoogle Playで販売中です。</p>
+                        <p>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリをApp StoreとGoogle Playで販売中です。</p>
                         <p style="font-size:x-large;"><a href="http://itunes.apple.com/jp/app//id480562721?mt=8&uo=4" target="itunes_store">App Store <img style="height:5em;" src="../design/app_store_badge.png" alt="App Store" /></a></p>
                         <p style="font-size:x-large;"><a href="http://market.android.com/details?id=org.kaoriha.kouchabutton">Google Play <img style="height:5em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>機能</h2>
