--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>紅茶ボタンのご案内</title>
+    <title>鄙の姫、宮処の巫女、余所者の嫁</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
 
     <script src="../jquery-1.6.2.min.js"></script>
@@ -30,7 +30,7 @@
             <img src="../design/now_loading.png" alt="Now Loading..." /></div>
         <div id="nav">
             <ul>
-                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie</a></li>
+                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 赤紫</a></li>
                 <li><a href="character_note.html">登場人物紹介 </a></li>
                 <li><a href="affiliate.html">二次利用・アフィリエイト</a></li>
                 <li><a href="http://kaoriha.org/latest_item.html">近刊案内</a></li>
@@ -41,14 +41,19 @@
             <div id="outer_frame">
                 <div id="text_frame">
                     <div id="content">
-                        <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="MMW――MMKとマイコンと私" /></p>
-                        <h1>紅茶ボタンのご案内</h1>
-                        <p>　学園放課後ウルトラライト百合ノベル『紅茶ボタン』、iOS / Android アプリでお届け中。</p>
-                        <p>　恋に部活に勉強に充実した青春？　いえいえ、なんにもしてません。狭い部室で顔突き合わせて、ガールズトークもしやしない。</p>
-                        <p>　<a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 C'est la vie</a> を途中までお読みいただけます。</p>
-                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id480562721?mt=8&uo=4"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.kouchabutton"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a> <span style="font-size:3em"><a href="http://www.amazon.co.jp/exec/obidos/ASIN/B00B12GK5A/hound-22/ref=nosim">Kindle</a></span></p>
-                        <h2>MZ-700 キャラグラの世界</h2>
-                        <p>　1982年に発売されたパソコンMZ-700の表示能力を再現しました。<a href="/kouchabutton/mz700/">こちら</a>のページでお楽しみいただけます。</p>
+                        <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="「うちは遊ぶ」" /></p>
+                        <h1>鄙の姫、宮処の巫女、余所者の嫁</h1>
+                        <p>　「お前は器量よしじゃきに、<ruby>官人<rt>かんにん</rt></ruby>の嫁にしてつかぁす」。めったに会えない父は、まれに会うたびに娘にそう言った。家にいなかったのではない。訛りが伝染らないよう、遠ざけられていた。</p>
+                        <p>　「<ruby>戦<rt>いくさ</rt></ruby>が終わったら、こういうオートバイが道にあふれるのよ」。<ruby>白衣<rt>びゃくえ</rt></ruby>と緋袴をまとい、奇妙な小さな自動二輪車を乗り回す彼女は、<ruby>宮処<rt>みやこ</rt></ruby>からきた。</p>
+                        <p>　「地付きの<ruby>平<rt>ひら</rt>公卿<rt>くぎょう</rt></ruby>の姫が、<ruby>王女<rt>きみのめ</rt></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
+                        <p>　近代ファンタジー小説『鄙の姫、宮処の巫女、余所者の嫁』を、平日の午後3時に配信しています。</p>
+                        <p style="font-size:xx-large;text-align:center">最新の配信</p>
+                        <h2>過去の配信分は？</h2>
+                        <p>　第1回から7回までは<a href="＊＊＊"こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id480562721?mt=8&uo=4"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.kouchabutton"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
+                        <h2>認証キー</h2>
+                        <p>　いち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
+                        <p>　2013年3月＊＊＊日の配信まで配布します。</p>
                         <h2>お問い合わせ</h2>
                         <p>　メールアドレス <span style="font-family:monospace">hajime@kaoriha.org</span> にて承ります。</p>
                     </div>
