--- a/ff_dotnet/FFSite/Public/apps.html
+++ b/ff_dotnet/FFSite/Public/apps.html
@@ -44,8 +44,8 @@
                         <h1>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリ</h1>
                         <p style="text-align:center;"><img src="screenshot.png" width="320px" height="480px" alt="スクリーンショット" /></p>
                         <p>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリをApp StoreとGoogle Playで販売中です。</p>
-                        <p style="font-size:x-large;"><a href="http://itunes.apple.com/jp/app//id480562721?mt=8&uo=4" target="itunes_store">App Store <img style="height:5em;" src="../design/app_store_badge.png" alt="App Store" /></a></p>
-                        <p style="font-size:x-large;"><a href="http://market.android.com/details?id=org.kaoriha.kouchabutton">Google Play <img style="height:5em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
+                        <p style="font-size:x-large;"><a href="http://itunes.apple.com/jp/app//id605689149?mt=8&uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);">App Store <img style="height:5em;" src="../design/app_store_badge.png" alt="App Store" /></a></p>
+                        <p style="font-size:x-large;"><a href="http://market.android.com/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);">Google Play <img style="height:5em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>機能</h2>
                         <p>・読み逃しナシ。第1回から最新の回まで、まとめて続けてご覧いただけます。</p>
                         <p>・配信を通知。毎日午後3時半、配信があったことを端末にお知らせします。</p>
