--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE HTML>
 <html lang="ja">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>鄙の姫、宮処の巫女、余所者の嫁</title>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1" />
 
     <script src="../jquery-1.6.2.min.js"></script>
 
-    <link rel="stylesheet" href="../tsume/tsume.css">
+    <link rel="stylesheet" href="../tsume/tsume.css" />
 
     <script src="../tsume/tsume.js"></script>
 
@@ -30,11 +30,10 @@
             <img src="../design/now_loading.png" alt="Now Loading..." /></div>
         <div id="nav">
             <ul>
-                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 赤紫</a></li>
+                <li><a href="9dc22e47-3b96-4366-a77d-42059568324e.html">第1章 赤紫</a></li>
                 <li><a href="character_note.html">登場人物紹介 </a></li>
-                <li><a href="affiliate.html">二次利用・アフィリエイト</a></li>
                 <li><a href="http://kaoriha.org/latest_item.html">近刊案内</a></li>
-                <li><a href="http://kaoriha.org/kanzenhitogata/">次回作のご案内</a></li>
+                <li><a href="apps.html">配信アプリ</a></li>
             </ul>
         </div>
         <div id="main">
@@ -43,14 +42,14 @@
                     <div id="content">
                         <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="「うちは遊ぶ」" /></p>
                         <h1>鄙の姫、宮処の巫女、余所者の嫁</h1>
-                        <p>　「お前は器量よしじゃきに、<ruby>官人<rt>かんにん</rt></ruby>の嫁にしてつかぁす」。めったに会えない父は、まれに会うたびに娘にそう言った。家にいなかったのではない。訛りが伝染らないよう、遠ざけられていた。</p>
-                        <p>　「<ruby>戦<rt>いくさ</rt></ruby>が終わったら、こういうオートバイが道にあふれるのよ」。<ruby>白衣<rt>びゃくえ</rt></ruby>と緋袴をまとい、奇妙な小さな自動二輪車を乗り回す彼女は、<ruby>宮処<rt>みやこ</rt></ruby>からきた。</p>
-                        <p>　「地付きの<ruby>平<rt>ひら</rt>公卿<rt>くぎょう</rt></ruby>の姫が、<ruby>王女<rt>きみのめ</rt></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
+                        <p>　「お前は器量よしじゃきに、<ruby><rb>官人</rb><rp>（</rp><rt>かんにん</rt><rp>）</rp></ruby>の嫁にしてつかぁす」。めったに会えない父は、まれに会うたびに娘にそう言った。家にいなかったのではない。訛りが伝染らないよう、遠ざけられていた。</p>
+                        <p>　「<ruby><rb>戦</rb><rp>（</rp><rt>いくさ</rt><rp>）</rp></ruby>が終わったら、こういうオートバイが道にあふれるのよ」。<ruby><rb>白衣</rb><rp>（</rp><rt>びゃくえ</rt><rp>）</rp></ruby>と緋袴をまとい、奇妙な小さな自動二輪車を乗り回す彼女は、<ruby><rb>宮処</rb><rp>（</rp><rt>みやこ</rt><rp>）</rp></ruby>からきた。</p>
+                        <p>　「地付きの<ruby><rb>平公卿</rb><rp>（</rp><rt>ひらくぎょう</rt><rp>）</rp></ruby>の姫が、<ruby><rb>王女</rb><rp>（</rp><rt>きみのめ</rt><rp>）</rp></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
                         <p>　近代ファンタジー小説『鄙の姫、宮処の巫女、余所者の嫁』を、平日の午後3時に配信しています。</p>
-                        <p style="font-size:xx-large;text-align:center">最新の配信</p>
+                        <p style="font-size:xx-large;text-align:center"><a href="latest.html">最新の配信</a></p>
                         <h2>過去の配信分は？</h2>
-                        <p>　第1回から7回までは<a href="＊＊＊"こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
-                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id480562721?mt=8&uo=4"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.kouchabutton"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
+                        <p>　第1回から7回までは<a href="9dc22e47-3b96-4366-a77d-42059568324e.html">こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>認証キー</h2>
                         <p>　いち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
                         <p>　2013年3月＊＊＊日の配信まで配布します。</p>
