--- a/ff_dotnet/FFSite/Public/apps.html
+++ b/ff_dotnet/FFSite/Public/apps.html
@@ -13,6 +13,8 @@
 
     <script src="../design/design.js"></script>
 
+    <script src="../android/ruby_fix.js"></script>
+
     <script src="../design/insert_app_badge.js"></script>
 
     <link rel="stylesheet" href="../design/design.css" />
