--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -13,6 +13,8 @@
 
     <script src="../design/design.js"></script>
 
+    <script src="../android/ruby_fix.js"></script>
+
     <script src="../design/insert_app_badge.js"></script>
 
     <link rel="stylesheet" href="../design/design.css" />
@@ -51,7 +53,7 @@
                         <p>　第1回から7回までは<a href="9dc22e47-3b96-4366-a77d-42059568324e.html">こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
                         <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>認証キー</h2>
-                        <p>　いち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
+                        <p>　連載開始当初にいち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
                         <p>　2013年3月＊＊＊日の配信まで配布します。</p>
                         <h2>お問い合わせ</h2>
                         <p>　メールアドレス <span style="font-family:monospace">hajime@kaoriha.org</span> にて承ります。</p>
