--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="../tsume/tsume.css" />
 
     <script src="../tsume/tsume.js"></script>
+
+<!--[if IE 9]>
+    <link rel="stylesheet" href="../ie/ruby_fix.css" />
+
+    <script src="../ie/ruby_fix.js"></script>
+<![endif]-->
 
     <script src="../design/design.js"></script>
 
@@ -51,7 +57,7 @@
                         <p style="font-size:xx-large;text-align:center"><a href="latest.html">最新の配信</a></p>
                         <h2>過去の配信分は？</h2>
                         <p>　第1回から7回までは<a href="9dc22e47-3b96-4366-a77d-42059568324e.html">こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
-                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&amp;uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>認証キー</h2>
                         <p>　連載開始当初にいち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
                         <p>　2013年3月＊＊＊日の配信まで配布します。</p>
