Meiryo font metrics problem workaround

--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -11,15 +11,11 @@
 
     <script src="../tsume/tsume.js"></script>
 
-<!--[if IE 9]>
-    <link rel="stylesheet" href="../ie/ruby_fix.css" />
-
-    <script src="../ie/ruby_fix.js"></script>
-<![endif]-->
-
     <script src="../design/design.js"></script>
 
     <script src="../android/ruby_fix.js"></script>
+
+    <script src="../meiryo/meiryo_fix.js"></script>
 
     <script src="../design/insert_app_badge.js"></script>
 
@@ -50,9 +46,9 @@
                     <div id="content">
                         <p style="text-align: center; padding-top:1em; padding-bottom:2em;"><img src="catchphrase.png" width="90%" alt="「うちは遊ぶ」" /></p>
                         <h1>鄙の姫、宮処の巫女、余所者の嫁</h1>
-                        <p>　「お前は器量よしじゃきに、<ruby><rb>官人</rb><rp>（</rp><rt>かんにん</rt><rp>）</rp></ruby>の嫁にしてつかぁす」。めったに会えない父は、まれに会うたびに娘にそう言った。家にいなかったのではない。訛りが伝染らないよう、遠ざけられていた。</p>
-                        <p>　「<ruby><rb>戦</rb><rp>（</rp><rt>いくさ</rt><rp>）</rp></ruby>が終わったら、こういうオートバイが道にあふれるのよ」。<ruby><rb>白衣</rb><rp>（</rp><rt>びゃくえ</rt><rp>）</rp></ruby>と緋袴をまとい、奇妙な小さな自動二輪車を乗り回す彼女は、<ruby><rb>宮処</rb><rp>（</rp><rt>みやこ</rt><rp>）</rp></ruby>からきた。</p>
-                        <p>　「地付きの<ruby><rb>平公卿</rb><rp>（</rp><rt>ひらくぎょう</rt><rp>）</rp></ruby>の姫が、<ruby><rb>王女</rb><rp>（</rp><rt>きみのめ</rt><rp>）</rp></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
+                        <p>　「お前は器量よしじゃきに、<ruby>官人<rp>（</rp><rt>かんにん</rt><rp>）</rp></ruby>の嫁にしてつかぁす」。めったに会えない父は、まれに会うたびに娘にそう言った。家にいなかったのではない。訛りが伝染らないよう、遠ざけられていた。</p>
+                        <p>　「<ruby>戦<rp>（</rp><rt>いくさ</rt><rp>）</rp></ruby>が終わったら、こういうオートバイが道にあふれるのよ」。<ruby>白衣<rp>（</rp><rt>びゃくえ</rt><rp>）</rp></ruby>と緋袴をまとい、奇妙な小さな自動二輪車を乗り回す彼女は、<ruby>宮処<rp>（</rp><rt>みやこ</rt><rp>）</rp></ruby>からきた。</p>
+                        <p>　「地付きの<ruby>平公卿<rp>（</rp><rt>ひらくぎょう</rt><rp>）</rp></ruby>の姫が、<ruby>王女<rp>（</rp><rt>きみのめ</rt><rp>）</rp></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
                         <p>　近代ファンタジー小説『鄙の姫、宮処の巫女、余所者の嫁』を、平日の午後3時に配信しています。</p>
                         <p style="font-size:xx-large;text-align:center"><a href="latest.html">最新の配信</a></p>
                         <h2>過去の配信分は？</h2>
