--- a/ff_dotnet/FFSite/Public/index.html
+++ b/ff_dotnet/FFSite/Public/index.html
@@ -51,8 +51,9 @@
                         <p>　「地付きの<ruby>平公卿<rp>（</rp><rt>ひらくぎょう</rt><rp>）</rp></ruby>の姫が、<ruby>王女<rp>（</rp><rt>きみのめ</rt><rp>）</rp></ruby>様に逆らえるもんかえ」。姫は、常に恐れ、怒り、悲しんでいたけれど、人を見下すことはけっしてない。</p>
                         <p>　近代ファンタジー小説『鄙の姫、宮処の巫女、余所者の嫁』を、平日の午後3時に配信しています。</p>
                         <p style="font-size:xx-large;text-align:center"><a href="latest.html">最新の配信</a></p>
-                        <h2>過去の配信分は？</h2>
-                        <p>　第1回から7回までは<a href="9dc22e47-3b96-4366-a77d-42059568324e.html">こちら</a>でご覧いただけます。それ以降につきましては、<a href="apps.html">iOS / Androidのアプリ</a>をお買い上げください。</p>
+                        <p style="font-size:x-large;text-align:center"><a href="9dc22e47-3b96-4366-a77d-42059568324e.html">第1回から</a></p>
+                        <h2>配信アプリ</h2>
+                        <p>　<a href="apps.html">iOS / Androidのアプリ</a>で配信を受け取れます。過去の配信分もすべてご覧いただけます。</p>
                         <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&amp;uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>
                         <h2>認証キー</h2>
                         <p>　連載開始当初にいち早くお越しくださったかたのために、過去の配信分をブラウザ上から無料で読める認証キーを配布しています。メールアドレスなどの登録は不要です。<a href="PublishAuthenticationKey.aspx">こちら</a>からどうぞ。</p>
