--- a/ff_private/ios/www_base/flowerflower/index.html
+++ b/ff_private/ios/www_base/flowerflower/index.html
@@ -4,23 +4,9 @@
     <meta charset="utf-8" />
     <title>鄙の姫、宮処の巫女、余所者の嫁</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1" />
-
-    <script src="../jquery-1.6.2.min.js"></script>
-
-    <script src="../design/spin.min.js"></script>
-
-    <script src="../ios/cordova.ios.js"></script>
-    <script src="./ios/scaleChanger.js"></script>
-    <script src="../ios/purchase.js"></script>
-
+    <script src="../flowerflower/load.js"></script>
     <link rel="stylesheet" href="../tsume/tsume.css" />
-
-    <script src="../tsume/tsume.js"></script>
-
-    <script src="../design/design.js"></script>
-
     <link rel="stylesheet" href="../design/design.css" />
-
 </head>
 <body>
     <div id="full_box">
