--- a/ff_dotnet/FFSite/Public/apps.html
+++ b/ff_dotnet/FFSite/Public/apps.html
@@ -5,23 +5,15 @@
     <title>『鄙の姫、宮処の巫女、余所者の嫁』の配信アプリ</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">
 
-    <script src="../jquery-1.6.2.min.js"></script>
+    <script src="../flowerflower/load.js"></script>
 
     <link rel="stylesheet" href="../tsume/tsume.css">
-
-    <script src="../tsume/tsume.js"></script>
-
-    <script src="../design/design.js"></script>
-
-    <script src="../design/insert_app_badge.js"></script>
 
     <link rel="stylesheet" href="../design/design.css" />
 
 <!--[if IE 8]>
     <link rel="stylesheet" href="../design/design_ie8.css" />
 <![endif]-->
-
-    <script src="/ga.js"></script>
 
 </head>
 <body>
@@ -31,7 +23,7 @@
         <div id="nav">
             <ul>
                 <li><a href="latest.html">最新の配信</a></li>
-                <li><a href="04c05eb9-ca71-4716-b3ca-5695d1a2a2ed.html">第1章 赤紫</a></li>
+                <li><a href="9dc22e47-3b96-4366-a77d-42059568324e.html">第1章 赤紫</a></li>
                 <li><a href="character_note.html">登場人物紹介 </a></li>
                 <li><a href="http://kaoriha.org/latest_item.html">近刊案内</a></li>
                 <li class="self_li">配信アプリ</li>
